@@ -3,6 +3,8 @@ post-v1.8.0
     - New %t and %T log escapes to identify the subprogram within a
       cooperating group of processes or threads that emitted a log message.
       The default log patterns now include this information.
+    - OpenFlow:
+      - Allow bitwise masking for IPv6 flow label.
 
 
 v1.8.0 - xx xxx xxxx
